--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "dont-sleep",
+  "source": "src/index.html",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "scripts": {
+    "start": "parcel",
+    "build": "parcel build"
+  },
   "devDependencies": {
     "parcel": "^2.3.2"
   }
