--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "parcel build"
   },
   "devDependencies": {
+    "@parcel/packager-raw-url": "^2.3.2",
+    "@parcel/transformer-webmanifest": "^2.3.2",
     "parcel": "^2.3.2"
   }
 }
